--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
       x.ready(iniciar);
       function iniciar() {
         var x;
-        x = $("h1#cambio");
+        x = $("*");  // Changed from $("h1#cambio") to ALL elements
         x.click(cambiar);
-        x = $("li:fir");
       }
-      function cambiar() {
+      function cambiar(event) {  // Added event parameter
+        event.stopPropagation();  // Prevent bubbling
         var x;
-        x = $("h1#cambio");
+        x = $(this);  // Changed from $("h1#cambio") to clicked element
         x.css("background-color", "yellow");
+        $("*").off("click");  // Disable all future clicks
       }
     </script>
   </head>
   <body>
-    <p id="cambio">Yo soy un parrafo</p>
     <p>Yo soy un parrafo</p>
-    <h1 id="cambio">Yo soy un titulo</h1>
+    <p>Yo soy un parrafo</p>
+    <h1>Yo soy un titulo</h1>
     <h1>Yo soy un titulo</h1>
     <ul>
       <li>Elemento 1</li>
